<resources>
    <string name="app_name">Test Case</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_mentorship">Mentorship</string>
    <string name="title_groups">Groups</string>
    <string name="title_content">Content</string>
    <string name="title_store">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_required">Please provide an email address</string>
    <string name="password_required">Please enter your account password.</string>
</resources>